--- a/myscripts/sft.yaml
+++ b/myscripts/sft.yaml
@@ -1,5 +1,5 @@
 # model
-model_name_or_path: /data/huboxiang/myllm/Qwen1.5-7B-Chat
+model_name_or_path: /data/huboxiang/myllm/llama2-7b-chat-hf
 
 # method
 stage: sft
@@ -11,8 +11,8 @@ ddp_timeout: 180000000
 deepspeed: myscripts/ds_z3_config.json
 
 # dataset
-dataset: ccl_train_base_qwen_easy,ccl_train_base_qwen_hard
-template: qwen
+dataset: MOH-X_train
+template: llama2
 cutoff_len: 1024
 max_samples: 5000
 # val_size: 0.1
@@ -20,14 +20,14 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 # output
-output_dir: saves/Qwen1.5-7B-Chat/full/sft-CL-ccl-train
+output_dir: saves/llama2-7b-chat-hf/full/sft-CL-MOH-X_train
 logging_steps: 10
 save_steps: 5000
 plot_loss: true
 overwrite_output_dir: true
 
 # train
-per_device_train_batch_size: 1
+per_device_train_batch_size: 4
 gradient_accumulation_steps: 1
 learning_rate: 0.00001
 num_train_epochs: 3.0
