--- a/myscripts/sft.yaml
+++ b/myscripts/sft.yaml
@@ -11,8 +11,8 @@ ddp_timeout: 180000000
 deepspeed: myscripts/ds_z3_config.json
 
 # dataset
-dataset: VUA18_train
-template: vicuna
+dataset: VUA18_train_easy,VUA18_train_medi,VUA18_train_hard
+template: llama2
 cutoff_len: 1024
 max_samples: 3000
 # val_size: 0.1
@@ -20,7 +20,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 # output
-output_dir: saves/llama2-7b-chat-hf/full/sft-VUA18_train
+output_dir: saves/llama2-7b-chat-hf/full/sft-CL-VUA18_train
 logging_steps: 10
 save_steps: 5000
 plot_loss: true
